# C401-D5-2-Lab14-AI-Evaluation-Benchmarking

./: .gitignore  main.py  pyproject.toml  requirements.txt
agent/: main_agent.py  main_agent_v2.py
analysis/: failure_analysis.md
analysis/reflection/: reflection_DangHoHai_2A202600020.md  reflection_HoSyMinhHa_2A202600060.md  reflection_TranXuanTruong_2A202600321.md
asr_benchmark/: README.md
asr_benchmark/dashboard/: app.py
asr_benchmark/scripts/: benchmark.py  push_to_hf.py
data/: beir_ingestion.py  context.md  golden_set.jsonl  synthetic_gen.py
engine/: expert_eval.py  llm_judge.py  retrieval_eval.py  runner.py  utils.py
reports/: benchmark_results.json  summary.json
